<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FeedWatcher</string>
    <string name="results">Results</string>
    <string name="queries">Queries</string>
    <string name="feeds">Feeds</string>
    <string name="add_feed">Add Feed</string>
    <string name="add_query">Add Query</string>
    <string name="query_save_query">Save</string>
    <string name="filter_filtertype">Filter type</string>
    <string name="query_add_filter">Add filter</string>
    <string name="enter_feed_url">Enter feed url</string>
    <string name="subscribe">Subscribe</string>
    <string name="feed_unsubscribe">Unsubscribe</string>
    <string name="url_loading_failed">Loading failed</string>
    <string name="result_found_in">Found in:</string>
    <string name="result_notification_channel_name">New results</string>
    <string name="result_notification_channel_description">Notifications for new Results</string>
    <string name="result_notification_title">New feed entries found</string>
    <string name="result_notification_content">New results were found in %s</string>
    <string-array name="filter_filtertypes">
        <item>Contains</item>
        <item>Feed</item>
        <item>New entry</item>
    </string-array>
    <string name="feed_already_subscribed">You already subscribed to this feed.</string>
    <string name="feed_logo_description">Feed logo</string>
    <string name="filter_contains_filter_text">Text</string>
    <string name="filter_feed_filter_feed">Feed</string>
    <string name="query_activity_title">Query Editor</string>
    <string name="query_query_name">Query name</string>
    <string name="preferences">Preferences</string>
    <string name="preferences_notifications_category">Notifications</string>
    <string name="preferences_notifications_switch">Show notifications</string>
    <string name="preferences_scanning_category">Feed scanning</string>
    <string name="preferences_scanning_background_scanning">Enable background scanning</string>
    <string name="preferences_scanning_interval">Scan interval</string>
    <string name="preferences_scanning_interval_summary">Scan every %s hours</string>
    <string name="preferences_scanning_interval_summary_minutes">Scan every %s minutes</string>
    <string name="preferences_scanning_interval_summary_hours">Scan every %s hours</string>
    <string name="preferences_scanning_interval_summary_hours_minutes">Scan every %sh%smin</string>
    <string name="preferences_scanning_interval_info">Your device supports a minimum scan interval of %smin with an accuracy of %smin.</string>
    <string name="filter_new_start_date_text">New entries after: %s</string>
    <string name="date_time_confirm">OK</string>
    <string name="date_time_cancel">Cancel</string>
    <string name="add_feed_invalid_url">Invalid URL</string>
    <string name="add_feed_never_updated">Never updated</string>
    <string name="add_feed_edit_feed_label">Edit Feed</string>
    <string name="import_feeds">Import Feeds</string>
    <string name="export_feeds">Export Feeds</string>
    <string name="title_activity_feed_import">FeedImportActivity</string>
    <string name="feed_import_description">You can import your feeds using an OPML file.</string>
    <string name="feed_import_select_file_button">Select OPML file</string>
    <string name="feed_import_chooser_title">Please select an OPML file.</string>
    <string name="feed_import_open_opml_failed">Failed to read OPML file (%s). Please select another file.</string>
    <string name="feed_import_list_title">Select the Feeds you want to add to FeedWatcher.</string>
    <string name="feed_import_import_button">Import</string>
    <string name="feed_import_import_failed">Importing the selected feeds failed (%s). Please select other feeds.</string>
    <string name="select_all">Select All</string>
    <string name="error_dialog_ok_button">OK</string>
    <string name="select_feeds_to_export">Select Feeds to export.</string>
    <string name="exporting_the_selected_feeds_failed">Exporting the selected feeds failed (%s).</string>
    <string name="select_file_to_export_feeds">Select to file to export feeds.</string>
    <string name="feedwatcher_feed_export">Feedwatcher Feed Export</string>
    <string name="feeds_exported">Feeds exported.</string>
    <string name="clear_results">Clear Results</string>
    <string name="results_cleared">Results cleared.</string>
    <string name="undo">Undo?</string>
    <string name="about_feedwatcher">About Feedwatcher</string>
    <string name="export_database">Export Database</string>
    <string name="database_successfully_exported">Database successfully exported.</string>
    <string name="database_export_failed">Database export failed.</string>
    <string name="feed_icon">Feed icon</string>
    <string name="feed_name">Feed name</string>
    <string name="scan_feeds">Scan feeds</string>
    <string name="last_scan">Last scanned: %s.</string>
    <string name="last_scan_failed_last_success">Some scans failed. Last failed scan: %s. Last successful scan: %s.</string>
    <string name="last_scan_failed">All scans failed. Last failed scan: %s.</string>
    <string name="never_scanned">Feed hasn\'t been scanned.</string>
    <string name="feed_item_no_tile">No title</string>
    <string name="feed_item_no_description">No description provided.</string>
</resources>
