<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_add_query"
            android:title="@string/add_query" />
        <item android:id="@+id/nav_add_feed"
            android:title="@string/add_feed"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_results"
            android:title="@string/results" />
        <item
            android:id="@+id/nav_queries"
            android:title="@string/queries" />
        <item
            android:id="@+id/nav_feeds"
            android:title="@string/feeds" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_preferences"
            android:title="@string/preferences"/>
    </group>

</menu>