<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FeedActivity">

    <TextView
        android:id="@+id/feed_add_feed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/add_feed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/feed_feed_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:layout_margin="@dimen/text_margin"
        android:hint="@string/enter_feed_url"
        app:layout_constraintTop_toBottomOf="@id/feed_add_feed_label"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/feed_feed_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        tools:text="Feed title"
        app:layout_constraintTop_toBottomOf="@id/feed_feed_url"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/feed_feed_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintTop_toBottomOf="@id/feed_feed_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/feed_feed_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        tools:text="Feed description"
        app:layout_constraintTop_toBottomOf="@id/feed_feed_icon"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/feed_subscribe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscribe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>