<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FeedExportActivity">

    <ProgressBar
        android:id="@+id/activity_feed_export_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/activity_feed_export_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/text_margin"
        app:layout_constraintTop_toBottomOf="@id/activity_feed_export_progress_bar"
        android:text="@string/select_feeds_to_export" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_feed_export_feeds"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintTop_toBottomOf="@id/activity_feed_export_list_title"
        app:layout_constraintBottom_toTopOf="@id/activity_feed_export_select_all_panel" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_feed_export_select_all_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintBottom_toTopOf="@id/activity_feed_export_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <CheckBox
            android:id="@+id/activity_feed_export_select_all_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/activity_feed_export_select_all_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/activity_feed_export_select_all_checkbox"
            android:checked="true"
            android:text="@string/select_all"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/activity_feed_export_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/export_feeds" />
</androidx.constraintlayout.widget.ConstraintLayout>